# quark-client

./: .gitignore  BUILDING.md  ClientPlayerEntity.txt  README.md  build.gradle  build_errors.txt  build_errors_utf8.txt  generate_modules.ps1  generate_modules.py  gradle.properties  javac.20260605_050034.args  settings.gradle  stonecutter.gradle
.github/workflows/: build-launcher.yml
gradle/wrapper/: gradle-wrapper.properties
launcher/: build.gradle  fabric.mod.json  main.js  package-lock.json  package.json  preload.js  store.js
launcher/agent/: AsmPatcher.java  AttachShim.java  Bootstrap.java  ClassResolver.java  ClassTransformer.java  Dummy.java  EnvironmentDetector.java  Injector.java  McReflect.java  MinecraftHook.java  ObfuscatedClassDetector.java  QuarkAgent.java  QuarkConfig.java  QuarkTelemetry.java  StandaloneClient.java  build-agent.sh  inject.bat  inject.sh  manifest.txt
launcher/scripts/: build-agent.js
launcher/server/: README.md  chat-relay.js  package-lock.json  package.json
launcher/src/: index.html  renderer.js  staff.js  style.css
quark-cpp/: CMakeLists.txt
quark-cpp/client/: dllmain.cpp
quark-cpp/injector/: main.cpp
server/: chat-server.js  package.json
src/main/java/cc/quark/: Quark.java
src/main/java/cc/quark/event/: Event.java  (+2 more)
src/main/java/com/ghostclient/: GhostClient.java
src/main/resources/: fabric.mod.json  ghostclient.mixins.json  quark.mixins.json
website/: README.md  app.js  index.html  style.css
website/public/: app.js  index.html  modules.html  modules.js  style.css
website/server/: package.json  server.js
(+3052 files in other folders)
